--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "^19.2.0",
     "react-hot-toast": "^2.6.0",
     "react-icons": "^5.5.0",
+    "react-loader-spinner": "^8.0.2",
     "react-router-dom": "^7.13.0"
   },
   "devDependencies": {
